--- a/seangine.cabal
+++ b/seangine.cabal
@@ -12,7 +12,8 @@ copyright:          2021
 category:           Graphics
 
 library
-    exposed-modules:  MyLib
+    exposed-modules:
+        Graphics.Seangine
     build-depends:    base ^>=4.14.3.0
     hs-source-dirs:   lib
     default-language: Haskell2010
