--- a/seangine.cabal
+++ b/seangine.cabal
@@ -56,6 +56,8 @@ executable seangine
         seangine
     hs-source-dirs:   app
     default-language: Haskell2010
+    other-modules:
+        Paths_seangine
 
 test-suite seangine-test
     default-language: Haskell2010
