--- a/seangine.cabal
+++ b/seangine.cabal
@@ -17,6 +17,7 @@ library
         Graphics.Seangine.Domain,
         Graphics.Seangine.Domain.Frame,
         Graphics.Seangine.Domain.Vertex,
+        Graphics.Seangine.Domain.UniformBufferObject,
         Graphics.Seangine.Init,
         Graphics.Seangine.Monad,
         Graphics.Seangine.Monad.Cmd,
@@ -31,6 +32,7 @@ library
         Graphics.Seangine.Window.SDL
     other-modules:
         Graphics.Seangine.Internal.BufferDetails
+        Graphics.Seangine.Internal.DescriptorSets
         Graphics.Seangine.Internal.GraphicsPipelineDetails
         Graphics.Seangine.Internal.SwapchainDetails
         Graphics.Seangine.Internal.PhysicalDeviceDetails
