build(api): Add glslang as build-tool-depends

--- a/seangine.cabal
+++ b/seangine.cabal
@@ -68,6 +68,7 @@ library
         TypeFamilies
     hs-source-dirs:   lib
     default-language: Haskell2010
+    build-tool-depends: glslang:glslang
 
 executable seangine
     main-is:          Main.hs
