Add transform from GLTF node

--- a/package.yaml
+++ b/package.yaml
@@ -82,6 +82,7 @@ library:
     - microlens
     - microlens-platform
     - transformers
+    - unliftio
     - unliftio-core
     - sdl2
     - text
