--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         extra_nix_config: |
           trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
           substituters = https://hydra.iohk.io https://cache.iog.io https://cache.nixos.org/
-    - uses: cachix/cachix-action@vXX
+    - uses: cachix/cachix-action@v12
       with:
         name: sgillespie
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
