feat: Add fourmolu and hlint checks

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,4 @@ jobs:
         name: sgillespie
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix build
+    - run: nix build .#hlintCheck .#fourmoluCheck
