--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
         extra_nix_config: |
           trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
           substituters = https://hydra.iohk.io https://cache.iog.io https://cache.nixos.org/
+          experimental-features = nix-command flakes
+          allow-import-from-derivation = true
+          accept-flake-config = true
     - uses: cachix/cachix-action@v12
       with:
         name: sgillespie
