--- a/fourmolu.yaml
+++ b/fourmolu.yaml
@@ -17,7 +17,7 @@ import-export-style: trailing
 indent-wheres: true
 
 # Whether to leave a space before an opening record brace
-record-brace-space: true
+record-brace-space: false
 
 # Number of spaces between top-level declarations
 newlines-between-decls: 1
